# deep_neuron_lab_challenge

./: .gitignore  DECISIONS.md  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py  pyproject.toml
api/router/: endpoints.py
api/schemas/: responses.py
api/services/: cars.py
api/utils/: lifespan.py
common/: base.py  db.py  logger.py  models.py
functional_tests/: pyproject.toml  test_api_functional.py
scraper/: Dockerfile  car_data_persister.py  main.py  pyproject.toml  scraper.py
tests/unit_tests/: test_scraper.py
