[project]
name = "deep-neuron-challenge"
version = "0.1.0"
description = "A scraping challenge issued by Deep Neuron Labs"
authors = [
    {name = "Austin Gamez"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
